# xecs

./: CMakeLists.txt
build-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  xecs.sln
build-codex/source/xecs/: cmake_install.cmake  xecs.vcxproj  xecs.vcxproj.filters
build-codex/source/xecs/Debug/: xecs_d.lib
build-codex/source/xecs/xecs.dir/Debug/xecs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  xecs.lastbuildstate
build-codex/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-codex/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-codex/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-codex/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
source/xecs/: CMakeLists.txt
source/xecs/private/xecs/: ecs.cpp  ecs_entity.cpp  ecs_world.cpp
source/xecs/public/xecs/: ecs.h  ecs_entity.h  ecs_system.h  ecs_world.h
source/xecs/public/xsparse/: xsparse_map.h  xsparse_set.h
